// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WelcomeContainerComponent should match the snapshot when game is loading 1`] = `
<ng-component>
  <card-game-welcome-container>
    <div
      class="text-container"
    >
      <p>
        Welcome to my Card Guessing Game Demo!
      </p>
      <p>
         You will be guessing a relative value of the next card randomly picked from the deck. Each correct answer will give you 0.1 points. Draws are counted in your favor. The game lasts for 30 guesses. 
      </p>
      <p>
         The game saves your progress after each move, so feel free to return any time you want. 
      </p>
    </div>
    
    <div
      class="button-container"
    >
      <button
        data-cy="start-button"
        disabled=""
      >
         Start New Game 
      </button>
    </div>
    
  </card-game-welcome-container>
</ng-component>
`;

exports[`WelcomeContainerComponent should match the snapshot with game in progress 1`] = `
<ng-component>
  <card-game-welcome-container>
    <div
      class="text-container"
    >
      <p>
        Welcome to my Card Guessing Game Demo!
      </p>
      <p>
         You will be guessing a relative value of the next card randomly picked from the deck. Each correct answer will give you 0.1 points. Draws are counted in your favor. The game lasts for 30 guesses. 
      </p>
      <p>
         The game saves your progress after each move, so feel free to return any time you want. 
      </p>
    </div>
    
    <h2
      class="resume-prompt"
    >
      Reload the previous game?
    </h2>
    <div
      class="button-container"
    >
      
      <button
        data-cy="continue-button"
      >
         YES, Resume Game 
      </button>
      <button
        data-cy="start-button"
      >
         NO, Start New Game 
      </button>
    </div>
    
  </card-game-welcome-container>
</ng-component>
`;

exports[`WelcomeContainerComponent should match the snapshot with no game in progress 1`] = `
<ng-component>
  <card-game-welcome-container>
    <div
      class="text-container"
    >
      <p>
        Welcome to my Card Guessing Game Demo!
      </p>
      <p>
         You will be guessing a relative value of the next card randomly picked from the deck. Each correct answer will give you 0.1 points. Draws are counted in your favor. The game lasts for 30 guesses. 
      </p>
      <p>
         The game saves your progress after each move, so feel free to return any time you want. 
      </p>
    </div>
    
    <div
      class="button-container"
    >
      <button
        data-cy="start-button"
      >
         Start New Game 
      </button>
    </div>
    
  </card-game-welcome-container>
</ng-component>
`;
